--- a/modules/apps/headless/headless-delivery/headless-delivery-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-delivery/headless-delivery-impl/rest-openapi.yaml
@@ -813,6 +813,11 @@ components:
                     type: integer
                 documentType:
                     properties:
+                        availableLanguages:
+                            items:
+                                type: string
+                            readOnly: true
+                            type: array
                         contentFields:
                             items:
                                 $ref: "#/components/schemas/ContentField"
