--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/build.gradle
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/build.gradle
@@ -1,6 +1,14 @@
 dependencies {
 	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.theme.minium.api", version: "2.1.0"
-	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.2.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
+	compileOnly project(":apps:fragment:fragment-api")
+	compileOnly project(":apps:layout:layout-admin-api")
+	compileOnly project(":apps:layout:layout-api")
+	compileOnly project(":apps:layout:layout-page-template-api")
+	compileOnly project(":apps:site:site-api")
+	compileOnly project(":core:petra:petra-string")
 }
