--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/build.gradle
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/build.gradle
@@ -1,4 +1,9 @@
 dependencies {
+	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.account.api", version: "6.0.0"
+	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.api", version: "19.1.0"
+	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.currency.api", version: "3.2.0"
+	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.initializer.util", version: "4.1.0"
+	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.product.api", version: "21.0.0"
 	compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.theme.minium.api", version: "2.1.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
