--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/WEB-INF/liferay-plugin-package.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/WEB-INF/liferay-plugin-package.properties
@@ -5,7 +5,7 @@ liferay-versions=7.2.0+
 long-description=
 module-group-id=liferay
 module-incremental-version=1
-name=Provisioning SaaS Theme
+name=OSB Commerce Provisioning Theme
 page-url=http://www.liferay.com
 short-description=
 tags=
