LHC-2558 Add components and style Assign Contact/Worker page

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
@@ -3,6 +3,7 @@ account-status=Account Status
 action-menu-icon=Action Menu Icon
 activate-account=Activate Account
 add-on=Add On
+add-roles=Add Roles
 agent-avatar=Agent Avatar
 archive=Archive
 are-you-sure-you-want-to-activate-the-account-listed-below=Are you sure you want to activate the account listed below?
