--- a/build.properties
+++ b/build.properties
@@ -102,6 +102,9 @@
         -e '!portal-impl/src/portal-*.properties' \
         -e '!portal-impl/src/system-*.properties' \
         \
+        -e '!modules/.releng/dxp/apps/lcs' \
+        -e '!modules/dxp/apps/lcs' \
+        \
         -X .
 
     #
