--- a/build.xml
+++ b/build.xml
@@ -1040,6 +1040,9 @@ This target has been renamed to "snapshot-bundle". Please call "snapshot-bundle"
 			/>
 		</delete>
 
+		<delete dir="${project.dir}/modules/.releng/dxp/apps/lcs" failonerror="false" />
+		<delete dir="${project.dir}/modules/dxp/apps/lcs" failonerror="false" />
+
 		<update-gradle-properties />
 
 		<if>
