--- a/modules/apps/headless/headless-discovery/headless-discovery-web/package.json
+++ b/modules/apps/headless/headless-discovery/headless-discovery-web/package.json
@@ -14,8 +14,11 @@
 		"graphql": "^15.0.0",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
-		"script-ext-html-webpack-plugin": "2.1.1",
 		"swagger-ui-react": "^3.25.2"
+	},
+	"devDependencies": {
+		"script-ext-html-webpack-plugin": "2.1.1",
+		"style-ext-html-webpack-plugin": "4.1.2"
 	},
 	"name": "headless-discovery-web",
 	"scripts": {
