--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-service/build.gradle
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-service/build.gradle
@@ -1,9 +1,14 @@
+buildService {
+	apiDir = "../osb-provisioning-api/src/main/java"
+	databaseNameMaxLength = 64
+}
+
 dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.aop.api", version: "1.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.0.0"
-	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
-	compileOnly project(":dxp:apps:osb:osb-koroneiki:osb-koroneiki-phloem:osb-koroneiki-phloem-rest-client")
+	compileOnly project(":dxp:apps:osb:osb-provisioning:osb-provisioning-api")
 }
