LHC-2264 Add region and language sections

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
@@ -99,6 +99,7 @@ street-2=Street 2
 street-3=Street 3
 support-end-date=Support End Date
 support-instructions=Support Instructions
+support-language=Support Language
 support-life=Support Life
 support-region=Support Region
 sync-to-lcs=Sync To LCS
