--- a/modules/apps/portal-vulcan/portal-vulcan-impl/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-vulcan/portal-vulcan-impl/src/main/resources/content/Language.properties
@@ -1,3 +1,4 @@
+excluded-operation-ids=Excluded Operation Ids
 graphql-api=GraphQL API
 headless-api-configuration-name=Headless API
 path-can-not-be-empty=Path cannot be empty.
