--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-web/src/main/resources/content/Language.properties
@@ -15,4 +15,5 @@ wait-time=This may take up to 2 minutes
 welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com.
 welcome-to-your-demo=Welcome to Your Demo
 work-email=Work Email
+your-plan=Your Plan
 your-work-email=Your Work Email
