--- a/build.properties
+++ b/build.properties
@@ -290,6 +290,7 @@
     #    dxp/apps/document-library-opener,\
     #    dxp/apps/documentum,\
     #    dxp/apps/frontend-theme,\
+    #    dxp/apps/lcs,\
     #    dxp/apps/oauth,\
     #    dxp/apps/portal,\
     #    dxp/apps/portal-mobile-device-detection-fiftyonedegrees-enterprise,\
