LPS-105380 Add ScreenNavigationCategory to check correct packaging

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -74,4 +74,5 @@
         ConfigurationBeanDeclaration:settings.definition,\
         ConfigurationModelListener:configuration.persistence.listener,\
         ModelResourcePermission:security.permission.resource,\
-        PermissionUpdateHandler:security.permission
+        PermissionUpdateHandler:security.permission,\
+        ScreenNavigationCategory:servlet.taglib.ui
