LPS-105380 Add FormNavigatorCategory to check correct packaging

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -73,6 +73,7 @@
     source.check.JavaPackagePathCheck.expectedInternalImplementsData=\
         ConfigurationBeanDeclaration:settings.definition,\
         ConfigurationModelListener:configuration.persistence.listener,\
+        FormNavigatorCategory:servlet.taglib.ui,\
         ModelResourcePermission:security.permission.resource,\
         PermissionUpdateHandler:security.permission,\
         ScreenNavigationCategory:servlet.taglib.ui
