LHC-2589 add product error handling

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
@@ -77,6 +77,7 @@ pin=Pin
 pin-note-icon=Pin Note Icon
 pinned=Pinned
 pinned-notes-icon=Pinned Notes Icon
+please-remove-the-product-from-all-product-bundles-before-deleting=Please remove the product from all product bundles before deleting.
 provisioned=Provisioned
 purchased=Purchased
 rabbitmq=RabbitMQ
