build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -222,7 +222,7 @@ bundle.version[com.liferay.asset.info.display.api]=2.3.8
 bundle.version[com.liferay.asset.info.display.impl]=1.0.17
 bundle.version[com.liferay.asset.link.service]=2.0.5
 bundle.version[com.liferay.asset.link.test]=1.0.0
-bundle.version[com.liferay.asset.list.api]=1.6.3
+bundle.version[com.liferay.asset.list.api]=1.7.0
 bundle.version[com.liferay.asset.list.service]=1.0.45
 bundle.version[com.liferay.asset.list.test]=1.0.0
 bundle.version[com.liferay.asset.list.web]=1.0.54
@@ -865,7 +865,7 @@ bundle.version[com.liferay.layout.set.prototype.impl]=4.0.11
 bundle.version[com.liferay.layout.set.prototype.test]=1.0.0
 bundle.version[com.liferay.layout.set.prototype.web]=3.0.18
 bundle.version[com.liferay.layout.taglib]=4.1.27
-bundle.version[com.liferay.layout.test.util]=1.0.12
+bundle.version[com.liferay.layout.test.util]=2.0.0
 bundle.version[com.liferay.layout.test]=1.0.0
 bundle.version[com.liferay.layout.type.controller.asset.display]=2.0.11
 bundle.version[com.liferay.layout.type.controller.content]=2.0.28
@@ -969,6 +969,7 @@ bundle.version[com.liferay.osb.commerce.provisioning.web]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.api]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.publishing.api]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.rabbitmq.connector]=1.0.0
+bundle.version[com.liferay.osb.distributed.messaging.service]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.subscribing.api]=1.0.0
 bundle.version[com.liferay.osb.koroneiki.application.list]=1.0.0
 bundle.version[com.liferay.osb.koroneiki.data.migration]=1.0.0
@@ -1117,7 +1118,7 @@ bundle.version[com.liferay.portal.file.install.api]=2.0.1
 bundle.version[com.liferay.portal.file.install.impl]=2.0.1
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.impl.trash.compat]=1.0.0
-bundle.version[com.liferay.portal.impl]=4.25.5
+bundle.version[com.liferay.portal.impl]=4.25.6
 bundle.version[com.liferay.portal.inactive.request.handler]=2.0.17
 bundle.version[com.liferay.portal.init.servlet.filter]=4.0.11
 bundle.version[com.liferay.portal.instance.lifecycle.api]=2.0.5
@@ -2569,6 +2570,7 @@ project.name[com.liferay.osb.commerce.provisioning.web]=:dxp:apps:osb:osb-commer
 project.name[com.liferay.osb.distributed.messaging.api]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-api
 project.name[com.liferay.osb.distributed.messaging.publishing.api]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-publishing-api
 project.name[com.liferay.osb.distributed.messaging.rabbitmq.connector]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-rabbitmq-connector
+project.name[com.liferay.osb.distributed.messaging.service]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-service
 project.name[com.liferay.osb.distributed.messaging.subscribing.api]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-subscribing-api
 project.name[com.liferay.osb.koroneiki.application.list]=:dxp:apps:osb:osb-koroneiki:osb-koroneiki-application-list
 project.name[com.liferay.osb.koroneiki.data.migration]=:dxp:apps:osb:osb-koroneiki:osb-koroneiki-data-migration
