LRQA-61520 Temporarily remove failing commerce tests

--- a/test.properties
+++ b/test.properties
@@ -3473,6 +3473,9 @@
 
     test.batch.class.names.excludes[search]=\
         ${test.batch.class.names.excludes},\
+        **/commerce-price-list-test/**/CommercePriceListIndexerTest.java,\
+        **/commerce-product-test/**/*Test.java,\
+        **/commerce-test/**/CommerceOrderItemIndexerTest.java,\
         **/portal-search-elasticsearch7/**/*Test.java,\
         **/portal-search-solr7/**/*Test.java
 
@@ -3544,6 +3547,9 @@
 
     test.batch.class.names.excludes[search-es7]=\
         ${test.batch.class.names.excludes},\
+        **/commerce-price-list-test/**/CommercePriceListIndexerTest.java,\
+        **/commerce-product-test/**/*Test.java,\
+        **/commerce-test/**/CommerceOrderItemIndexerTest.java,\
         **/portal-search-elasticsearch6/**/*Test.java,\
         **/portal-search-solr/**/*Test.java,\
         **/portal-search-solr7/**/*Test.java
