LRCI-234 Add functional smoke batches for release suites

--- a/test.properties
+++ b/test.properties
@@ -2972,6 +2972,9 @@
         functional-bundle-tomcat-sybase160-jdk8,\
         functional-bundle-weblogic-mysql57-jdk8,\
         functional-bundle-wildfly-mysql57-jdk8,\
+        functional-smoke-bundle-jboss-mysql57-jdk8,\
+        functional-smoke-bundle-weblogic-mysql57-jdk8,\
+        functional-smoke-bundle-wildfly-mysql57-jdk8,\
         jsf-jdk8,\
         modules-integration-bundle-db2111-jdk8,\
         modules-integration-bundle-hypersonic20-jdk8,\
@@ -3078,8 +3081,28 @@
             (portal.fixpack.release == true OR portal.release == true)\
         )
 
+    test.batch.run.property.query[functional-smoke-bundle-jboss-mysql57-jdk8][portal-fixpack-release]=\
+        (app.server.types ~ jboss) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
     test.batch.run.property.query[functional-smoke-bundle-tomcat-mysql57-jdk8][portal-fixpack-release]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-weblogic-mysql57-jdk8][portal-fixpack-release]=\
+        (app.server.types ~ weblogic) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-websphere-mysql57-jdk8][portal-fixpack-release]=\
+        (app.server.types ~ websphere) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-wildfly-mysql57-jdk8][portal-fixpack-release]=\
+        (app.server.types ~ wildfly) AND \
         (database.types == null OR database.types ~ mysql) AND \
         (portal.smoke == true)
 
@@ -3102,6 +3125,9 @@
         functional-bundle-tomcat-sybase160-jdk8,\
         functional-bundle-weblogic-mysql57-jdk8,\
         functional-bundle-wildfly-mysql57-jdk8,\
+        functional-smoke-bundle-jboss-mysql57-jdk8,\
+        functional-smoke-bundle-weblogic-mysql57-jdk8,\
+        functional-smoke-bundle-wildfly-mysql57-jdk8,\
         jsf-jdk8,\
         patching-tool-custom-scripts-jdk8
 
@@ -3213,8 +3239,28 @@
             (portal.release == true)\
         )
 
+    test.batch.run.property.query[functional-smoke-bundle-jboss-mysql57-jdk8][portal-hotfix-release]=\
+        (app.server.types ~ jboss) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
     test.batch.run.property.query[functional-smoke-bundle-tomcat-mysql57-jdk8][portal-hotfix-release]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-weblogic-mysql57-jdk8][portal-hotfix-release]=\
+        (app.server.types ~ weblogic) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-websphere-mysql57-jdk8][portal-hotfix-release]=\
+        (app.server.types ~ websphere) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-wildfly-mysql57-jdk8][portal-hotfix-release]=\
+        (app.server.types ~ wildfly) AND \
         (database.types == null OR database.types ~ mysql) AND \
         (portal.smoke == true)
 
@@ -3232,6 +3278,8 @@
         functional-bundle-tomcat-oracle122-jdk8,\
         functional-bundle-tomcat-sybase160-jdk8,\
         functional-bundle-weblogic-mysql57-jdk8,\
+        functional-smoke-bundle-jboss-mysql57-jdk8,\
+        functional-smoke-bundle-weblogic-mysql57-jdk8,\
         modules-integration-bundle-db2111-jdk8,\
         modules-integration-bundle-oracle122-jdk8,\
         #modules-integration-bundle-sybase160-jdk8
@@ -3243,6 +3291,7 @@
         functional-bundle-tomcat-mysql57-jdk11_open,\
         functional-bundle-tomcat-postgresql10-jdk8,\
         functional-bundle-wildfly-mysql57-jdk8,\
+        functional-smoke-bundle-wildfly-mysql57-jdk8,\
         jsf-jdk8,\
         modules-integration-bundle-hypersonic20-jdk8,\
         modules-integration-bundle-mariadb102-jdk8,\
@@ -3357,8 +3406,28 @@
             (portal.release == true)\
         )
 
+    test.batch.run.property.query[functional-smoke-bundle-jboss-mysql57-jdk8][portal-release]=\
+        (app.server.types ~ jboss) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
     test.batch.run.property.query[functional-smoke-bundle-tomcat-mysql57-jdk8][portal-release]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-weblogic-mysql57-jdk8][portal-release]=\
+        (app.server.types ~ weblogic) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-websphere-mysql57-jdk8][portal-release]=\
+        (app.server.types ~ websphere) AND \
+        (database.types == null OR database.types ~ mysql) AND \
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-smoke-bundle-wildfly-mysql57-jdk8][portal-release]=\
+        (app.server.types ~ wildfly) AND \
         (database.types == null OR database.types ~ mysql) AND \
         (portal.smoke == true)
 
