--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon
 edit-note-icon=Edit Note Icon
 edit-subscription=Edit Subscription
 edit-team=Edit Team
+email-address-verified=Email Address Verified
 entitlements=Entitlements
 ewsa=EWSA
 expand-panel-button=Expand Panel Button
@@ -52,6 +53,7 @@ grace-period=Grace Period
 grace-period-end-date=Grace Period End Date
 instance-size=Instance Size
 instructions=Instructions
+language-id=Language ID
 lcs-support-admin=LCS Support Admin
 liferay-workers=Liferay Workers
 name-code=Name | Code
@@ -75,6 +77,7 @@ note-deleted-successfully=Note deleted successfully.
 note-updated-successfully=Note updated successfully.
 notes=Notes
 oem-instructions=OEM Instructions
+okta-id=Okta ID
 original-value=Original Value
 other=Other
 parent-account=Parent Account
