--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language.properties
@@ -65,6 +65,7 @@ new-value=New Value
 next-term-starts=Next Term Starts
 no-accounts-were-found=No accounts were found.
 no-contacts-were-found=No contacts were found.
+no-entitlements-were-found=No Entitlements were found.
 no-external-links-were-found=No external links were found.
 no-notes-were-found=No notes were found.
 no-product-bundles-were-found=No product bundles were found.
