build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -965,6 +965,7 @@ bundle.version[com.liferay.osb.commerce.portal.instances.initializer]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.api]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.impl]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.site.initializer]=1.0.0
+bundle.version[com.liferay.osb.commerce.provisioning.theme.impl]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.web]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.api]=1.0.0
 bundle.version[com.liferay.osb.distributed.messaging.publishing.api]=1.0.0
@@ -1118,7 +1119,7 @@ bundle.version[com.liferay.portal.file.install.api]=2.0.1
 bundle.version[com.liferay.portal.file.install.impl]=2.0.1
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.impl.trash.compat]=1.0.0
-bundle.version[com.liferay.portal.impl]=4.25.7
+bundle.version[com.liferay.portal.impl]=4.25.8
 bundle.version[com.liferay.portal.inactive.request.handler]=2.0.17
 bundle.version[com.liferay.portal.init.servlet.filter]=4.0.11
 bundle.version[com.liferay.portal.instance.lifecycle.api]=2.0.5
@@ -2566,6 +2567,7 @@ project.name[com.liferay.osb.commerce.portal.instances.initializer]=:dxp:apps:os
 project.name[com.liferay.osb.commerce.provisioning.api]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-api
 project.name[com.liferay.osb.commerce.provisioning.impl]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-impl
 project.name[com.liferay.osb.commerce.provisioning.site.initializer]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-site-initializer
+project.name[com.liferay.osb.commerce.provisioning.theme.impl]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-theme-impl
 project.name[com.liferay.osb.commerce.provisioning.web]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-web
 project.name[com.liferay.osb.distributed.messaging.api]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-api
 project.name[com.liferay.osb.distributed.messaging.publishing.api]=:dxp:apps:osb:osb-distributed-messaging:osb-distributed-messaging-publishing-api
