--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -961,6 +961,7 @@ bundle.version[com.liferay.organizations.item.selector.api]=2.0.4
 bundle.version[com.liferay.organizations.item.selector.web]=2.0.12
 bundle.version[com.liferay.organizations.service]=2.0.23
 bundle.version[com.liferay.organizations.test]=1.0.0
+bundle.version[com.liferay.osb.commerce.lang]=1.0.0
 bundle.version[com.liferay.osb.commerce.portal.instances.initializer]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.api]=1.0.0
 bundle.version[com.liferay.osb.commerce.provisioning.impl]=1.0.0
@@ -1119,7 +1120,7 @@ bundle.version[com.liferay.portal.file.install.api]=2.0.1
 bundle.version[com.liferay.portal.file.install.impl]=2.0.1
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.impl.trash.compat]=1.0.0
-bundle.version[com.liferay.portal.impl]=4.25.8
+bundle.version[com.liferay.portal.impl]=4.25.9
 bundle.version[com.liferay.portal.inactive.request.handler]=2.0.17
 bundle.version[com.liferay.portal.init.servlet.filter]=4.0.11
 bundle.version[com.liferay.portal.instance.lifecycle.api]=2.0.5
@@ -1135,7 +1136,7 @@ bundle.version[com.liferay.portal.kernel.io.compat]=1.0.0
 bundle.version[com.liferay.portal.kernel.memory.compat]=1.0.0
 bundle.version[com.liferay.portal.kernel.nio.compat]=1.0.0
 bundle.version[com.liferay.portal.kernel.util.compat]=1.0.0
-bundle.version[com.liferay.portal.kernel]=4.64.4
+bundle.version[com.liferay.portal.kernel]=4.65.1
 bundle.version[com.liferay.portal.language.extender]=4.0.9
 bundle.version[com.liferay.portal.language.servlet.filter]=4.0.12
 bundle.version[com.liferay.portal.language.test]=1.0.0
@@ -2563,6 +2564,7 @@ project.name[com.liferay.organizations.item.selector.api]=:apps:organizations:or
 project.name[com.liferay.organizations.item.selector.web]=:apps:organizations:organizations-item-selector-web
 project.name[com.liferay.organizations.service]=:apps:organizations:organizations-service
 project.name[com.liferay.organizations.test]=:apps:organizations:organizations-test
+project.name[com.liferay.osb.commerce.lang]=:dxp:apps:osb:osb-commerce:osb-commerce-lang
 project.name[com.liferay.osb.commerce.portal.instances.initializer]=:dxp:apps:osb:osb-commerce:osb-commerce-portal-instances-initializer
 project.name[com.liferay.osb.commerce.provisioning.api]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-api
 project.name[com.liferay.osb.commerce.provisioning.impl]=:dxp:apps:osb:osb-commerce:osb-commerce-provisioning:osb-commerce-provisioning-impl
