--- a/test.properties
+++ b/test.properties
@@ -3680,6 +3680,7 @@
 
     test.batch.class.names.excludes[search-solr]=\
         ${test.batch.class.names.excludes},\
+        **/commerce/**/*Test.java,\
         **/headless-admin-taxonomy-test/**/TaxonomyVocabularyResourceTest.java,\
         **/module-configuration-localization-test/**/ModuleConfigurationLocalizationTest.java,\
         **/portal-search-elasticsearch6/**/*Test.java,\
