--- a/test.properties
+++ b/test.properties
@@ -2096,6 +2096,8 @@
     test.batch.spira.test.case.type[*-cucumber-*]=Cucumber
     test.batch.spira.test.case.type[functional-*]=Poshi
 
+    test.batch.spira.test.case.type[integration-*][relevant]=Integration
+    test.batch.spira.test.case.type[integration-*][smoke]=Integration
     test.batch.spira.test.case.type[integration-*][test-portal-acceptance-upstream*]=Integration
     test.batch.spira.test.case.type[integration-*][test-portal-fixpack-release]=Integration
     test.batch.spira.test.case.type[integration-*][test-portal-hotfix-release]=Integration
@@ -2103,6 +2105,8 @@
     test.batch.spira.test.case.type[integration-*][test-portal-testsuite-upstream*]=Integration
     test.batch.spira.test.case.type[integration-*][test-portal-upstream*]=Integration
 
+    test.batch.spira.test.case.type[modules-integration-*][relevant]=Modules Integration
+    test.batch.spira.test.case.type[modules-integration-*][smoke]=Modules Integration
     test.batch.spira.test.case.type[modules-integration-*][test-portal-acceptance-upstream*]=Modules Integration
     test.batch.spira.test.case.type[modules-integration-*][test-portal-fixpack-release]=Modules Integration
     test.batch.spira.test.case.type[modules-integration-*][test-portal-hotfix-release]=Modules Integration
@@ -2110,6 +2114,8 @@
     test.batch.spira.test.case.type[modules-integration-*][test-portal-testsuite-upstream*]=Modules Integration
     test.batch.spira.test.case.type[modules-integration-*][test-portal-upstream*]=Modules Integration
 
+    test.batch.spira.test.case.type[modules-unit-*][relevant]=Modules Unit
+    test.batch.spira.test.case.type[modules-unit-*][smoke]=Modules Unit
     test.batch.spira.test.case.type[modules-unit-*][test-portal-acceptance-upstream*]=Modules Unit
     test.batch.spira.test.case.type[modules-unit-*][test-portal-fixpack-release]=Modules Unit
     test.batch.spira.test.case.type[modules-unit-*][test-portal-hotfix-release]=Modules Unit
@@ -2120,6 +2126,8 @@
     test.batch.spira.test.case.type[plugins-functional-*]=Poshi
     test.batch.spira.test.case.type[test-portal-environment-*]=Poshi
 
+    test.batch.spira.test.case.type[unit-*][relevant]=Unit
+    test.batch.spira.test.case.type[unit-*][smoke]=Unit
     test.batch.spira.test.case.type[unit-*][test-portal-acceptance-upstream*]=Unit
     test.batch.spira.test.case.type[unit-*][test-portal-fixpack-release]=Unit
     test.batch.spira.test.case.type[unit-*][test-portal-hotfix-release]=Unit
