--- a/test.properties
+++ b/test.properties
@@ -2910,7 +2910,10 @@
 
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][oauth2]=\
         (portal.upstream == true) AND \
-        (testray.main.component.name ~ "OAuth 2")
+        (\
+            (testray.component.names ~ "OAuth 2") OR \
+            (testray.main.component.name ~ "OAuth 2")\
+        )
 
     #
     # OneDrive
@@ -3747,6 +3750,7 @@
             (testray.main.component.name ~ "Permissions") OR \
             (testray.main.component.name ~ "SAML") OR \
             (testray.main.component.name ~ "Security") OR \
+            (testray.main.component.name ~ "Upgrades Security") OR \
             (testray.main.component.name ~ "XSS")\
         )
 
@@ -4580,6 +4584,7 @@
         Permissions,\
         SAML,\
         Security,\
+        Upgrades Security,\
         XSS
 
     testray.team.segmentation-and-personalization.component.names=\
