build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -621,7 +621,7 @@ bundle.version[com.liferay.flags.taglib]=4.2.16
 bundle.version[com.liferay.flags.test]=1.0.0
 bundle.version[com.liferay.flags.web]=4.0.17
 bundle.version[com.liferay.flash.web]=3.0.14
-bundle.version[com.liferay.fragment.api]=4.1.5
+bundle.version[com.liferay.fragment.api]=4.2.0
 bundle.version[com.liferay.fragment.collection.contributor.basic.component]=1.0.41
 bundle.version[com.liferay.fragment.collection.contributor.basic.section]=1.0.27
 bundle.version[com.liferay.fragment.entry.processor.api]=1.1.5
@@ -718,31 +718,31 @@ bundle.version[com.liferay.headless.admin.workflow.impl]=3.0.40
 bundle.version[com.liferay.headless.admin.workflow.test]=1.0.0
 bundle.version[com.liferay.headless.batch.engine.api]=11.3.1
 bundle.version[com.liferay.headless.batch.engine.impl]=2.0.17
-bundle.version[com.liferay.headless.commerce.admin.account.api]=9.0.1
+bundle.version[com.liferay.headless.commerce.admin.account.api]=9.1.0
 bundle.version[com.liferay.headless.commerce.admin.account.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.account.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.account.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.catalog.api]=13.0.1
+bundle.version[com.liferay.headless.commerce.admin.catalog.api]=13.1.0
 bundle.version[com.liferay.headless.commerce.admin.catalog.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.catalog.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.catalog.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.channel.api]=4.0.1
+bundle.version[com.liferay.headless.commerce.admin.channel.api]=4.1.0
 bundle.version[com.liferay.headless.commerce.admin.channel.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.channel.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.channel.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.inventory.api]=5.0.1
+bundle.version[com.liferay.headless.commerce.admin.inventory.api]=5.1.0
 bundle.version[com.liferay.headless.commerce.admin.inventory.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.inventory.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.inventory.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.order.api]=8.0.1
+bundle.version[com.liferay.headless.commerce.admin.order.api]=8.1.0
 bundle.version[com.liferay.headless.commerce.admin.order.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.order.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.order.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.pricing.api]=12.0.1
+bundle.version[com.liferay.headless.commerce.admin.pricing.api]=12.1.0
 bundle.version[com.liferay.headless.commerce.admin.pricing.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.pricing.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.pricing.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.site.setting.api]=4.0.1
+bundle.version[com.liferay.headless.commerce.admin.site.setting.api]=4.1.0
 bundle.version[com.liferay.headless.commerce.admin.site.setting.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.site.setting.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.admin.site.setting.test]=1.0.0
@@ -750,11 +750,11 @@ bundle.version[com.liferay.headless.commerce.bom.api]=3.0.1
 bundle.version[com.liferay.headless.commerce.bom.impl]=3.0.1
 bundle.version[com.liferay.headless.commerce.core.api]=2.0.1
 bundle.version[com.liferay.headless.commerce.core.impl]=2.0.1
-bundle.version[com.liferay.headless.commerce.delivery.cart.api]=4.0.1
+bundle.version[com.liferay.headless.commerce.delivery.cart.api]=4.1.0
 bundle.version[com.liferay.headless.commerce.delivery.cart.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.delivery.cart.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.delivery.cart.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.delivery.catalog.api]=4.0.1
+bundle.version[com.liferay.headless.commerce.delivery.catalog.api]=4.1.0
 bundle.version[com.liferay.headless.commerce.delivery.catalog.client]=2.0.1
 bundle.version[com.liferay.headless.commerce.delivery.catalog.impl]=2.0.1
 bundle.version[com.liferay.headless.commerce.delivery.catalog.test]=1.0.0
@@ -1119,8 +1119,9 @@ bundle.version[com.liferay.portal.executor]=4.0.5
 bundle.version[com.liferay.portal.file.install.api]=2.0.1
 bundle.version[com.liferay.portal.file.install.impl]=2.0.1
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
+bundle.version[com.liferay.portal.fragment.bundle.watcher]=2.0.0
 bundle.version[com.liferay.portal.impl.trash.compat]=1.0.0
-bundle.version[com.liferay.portal.impl]=4.25.9
+bundle.version[com.liferay.portal.impl]=4.25.10
 bundle.version[com.liferay.portal.inactive.request.handler]=2.0.17
 bundle.version[com.liferay.portal.init.servlet.filter]=4.0.11
 bundle.version[com.liferay.portal.instance.lifecycle.api]=2.0.5
@@ -2722,6 +2723,7 @@ project.name[com.liferay.portal.executor]=:apps:portal:portal-executor
 project.name[com.liferay.portal.file.install.api]=:apps:static:portal-file-install:portal-file-install-api
 project.name[com.liferay.portal.file.install.impl]=:apps:static:portal-file-install:portal-file-install-impl
 project.name[com.liferay.portal.file.install.test]=:apps:static:portal-file-install:portal-file-install-test
+project.name[com.liferay.portal.fragment.bundle.watcher]=:apps:portal:portal-fragment-bundle-watcher
 project.name[com.liferay.portal.impl.trash.compat]=:core:portal-compat:trash:portal-impl-trash-compat
 project.name[com.liferay.portal.inactive.request.handler]=:apps:portal:portal-inactive-request-handler
 project.name[com.liferay.portal.init.servlet.filter]=:apps:portal:portal-init-servlet-filter
